--- a/index.html
+++ b/index.html
@@ -1,53 +1,39 @@
 <html>
-  <head>
-    <title>PlatziMediaPlayer.js</title>
-    <link
-      rel="stylesheet"
-      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
-    />
-    <link rel="stylesheet" href="./assets/index.css" />
-  </head>
 
-  <body>
+<head>
+    <title>Crisfon6MediaPlayer.js</title>
+    <link rel="stylesheet" href="./assets/index.css" />
+</head>
+
+<body>
     <header>
-      <h1>PlatziMediaPlayer.js</h1>
-      <p>An extensible media player.</p>
+        <h1>Crisfon6 MediaPlayer.js</h1>
+        <p>An extensible media player.</p>
     </header>
 
     <main class="container">
-      <video class="movie">
+        <video class="movie">
         <source src="./assets/BigBuckBunny.mp4" />
       </video>
 
-      <button>Play/Pause</button>
+        <button>Play/Pause</button>
     </main>
 
     <script>
-      function MediaPlayer(config) {
-        this.media = config.el;
-      }
+        const video = document.querySelector("video");
+        const button = document.querySelector('button');
 
-      MediaPlayer.prototype.play = function() {
-        this.media.play();
-      };
+        function MediaPlayer(config) {
+            this.media = config.el;
+        };
 
-      MediaPlayer.prototype.pause = function() {
-        this.media.pause();
-      };
-
-      MediaPlayer.prototype.togglePlay = function() {
-        if (this.media.paused) {
-          this.play();
-        } else {
-          this.pause();
+        function MediaPlayer() {};
+        MediaPlayer.prototype.play = function() {
+            video.play()
         }
-      };
-
-      const video = document.querySelector('video');
-      const player = new MediaPlayer({ el: video });
-
-      const button = document.querySelector('button');
-      button.onclick = () => player.togglePlay();
+        const player = new MediaPlayer();
+        button.onclick = () => player.play();
     </script>
-  </body>
+</body>
+
 </html>
