--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button>Play/Pause</button>
     </main>
 
-    <script src="/assets/index.js">
+    <script type="module" src="/assets/index.js">
     </script>
 </body>
 
